# page-crawler

./: .env.example  .gitignore  README.md  config.yaml  docker-compose.yml  main.py  mcp_config.json  pyproject.toml  queries.yaml  setup.sh
data/: jobs.db  token_stats.json
src/: qdrant_utils.py
src/agents/: competitor_prompt.py  job_queue.py  own_site_prompt.py  runner.py
src/analysis/: clustering.py  gap_analysis.py  reduction.py
src/crawler/: Dockerfile  entrypoint.sh
src/mcp_server/: Dockerfile  db_server.py  return_types.py  token_counter.py
src/ui/: Dockerfile  app.py
