[project]
name = "page-crawler"
version = "0.1.0"
description = "SEO Semantic Competitor Analysis System"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "qdrant-client>=1.12.0",
    "openai>=1.55.0",
    "umap-learn>=0.5.7",
    "hdbscan>=0.8.40",
    "scikit-learn>=1.5.0",
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "mcp[cli]>=1.3.0",
    "click>=8.1.8",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
]

[project.scripts]
crawler = "main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ipython>=8.0.0",
]
